# tiny-deep-feature-detection

./: Experiment.ipynb  README.md  pyproject.toml
nw_code/: datasets.py  student_teacher.py  tiny_keypoint_nn.py  visualization.py
